@@ -9,6 +9,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class Principal {
     private Scanner teclado = new Scanner(System.in);
@@ -84,7 +85,7 @@ public class Principal {
         List<Serie> series = new ArrayList<>();
         series = datosSeries.stream()
                 .map(d-> new Serie(d))
-                .toList();
+                .collect(Collectors.toList());
 
         series.stream()
                 .sorted(Comparator.comparing(Serie::getGenero))
